# cpp-cardgame

./: .gitignore  CMakeLists.txt  CardGameInitializer.cpp  CardGameInitializer.h  CardGameRenderer.cpp  CardGameRenderer.h  README.md  conanfile-macos.txt  conanfile.txt  gl2.h  gl2platform.h  main.cpp  servewasm.py
scripts/: build-all.sh  build-emcc.sh  build-ios.sh
web/: CMakeLists.txt  TODO  WebGLContext.cpp  WebGLContext.h  html5.h  html5_webgl.h  web_main.cpp
